client/app/css/main.css
@font-face {
  font-family: 'Metropolis';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../lib/webfonts/metropolis-all-400-normal.woff') format('woff');
}

@font-face {
  font-family: 'Metropolis';
  font-style: bold;
  font-weight: 700;
  font-display: swap;
  src: url('../lib/webfonts/metropolis-all-700-normal.woff') format('woff');
}

* {
  word-break: break-word;
  word-wrap: break-word;
  overflow-wrap: break-word;
  box-shadow: none;
}

html,
body {
  height: 100%;
}

body {
  background-color: #ffffff;
  color: #1d1f2a;
  font-family: 'Metropolis', Helvetica, Arial, sans-serif;
  font-size: 16px;
  min-height: 20rem;
}

a,
a:hover,
a:active,
a:focus {
  color: #205282;
  outline: 0;
  font-weight: bold;
  text-decoration: none;
}

a:hover,
.onionaddress {
  color: #5797d5;
}

.onionaddress {
  font-weight: bold;
}

.visible-on-over {
  opacity: .2;
}

.visible-on-over:hover {
  opacity: 1;
}

#Sidebar a {
  display: block;
  margin-bottom: .5em;
}

#Sidebar a.active,
#Sidebar a:active.active,
#Sidebar a:hover.active,
#Sidebar a:focus.active {
  border-bottom: 1px solid #c8d1e0;
  width: max-content;
}

[dir] .form-control,
[dir="ltr"] .custom-select,
[dir="rtl"] .custom-select {
  background-color: #f5f7fa;
}

[dir] .form-control:hover {
  background-color: #ffffff;
}

[dir] .form-control.is-valid,
[dir] .was-validated .form-control:valid {
  border-color: #c8d1e0;
}

[dir] .h1,
[dir] h1 {
  font-size: 1.6em;
}

[dir] .h2,
[dir] h2 {
  font-size: 1.5em;
}

[dir] .h3,
[dir] h3 {
  font-size: 1.4em;
}

[dir] .h4,
[dir] h4 {
  font-size: 1.3em;
}

[dir] .h5,
[dir] h5 {
  font-size: 1.2em;
}

[dir] .h6,
[dir] h6 {
  font-size: 1.1em;
}

[dir] .container-fluid {
  padding: 0;
  overflow-x: hidden;
}

[dir] .nav-tabs .nav-item.show .nav-link,
[dir] .nav-tabs .nav-link.active {
  color: #103253;
}

[dir] .table thead th {
  border-top: 0;
}

[dir] .btn {
  font-weight: bold;
}

#PageContent {
  flex: 1 0 auto;
}

#HeaderBox,
#ContentBox,
#FooterBox,
#DemoBadge,
#PrivacyBadge {
  padding: 1em;
}

#HeaderBox::after {
  clear: both;
  content: '';
  display: block;
}

.default-logo {
  height: 3.2rem;
  width: 3.2rem;
}

.contextImg,
.receiverImg {
  height: 10rem;
  max-width: 20rem;
}

.title {
  font-weight: bold;
}

.receipt {
  text-align: center;
}

#PrivacyBadge {
  background-color: #1d1f24;
  color: #ffffff;
}

.tab-content {
  padding-top: 1em;
}

.preformatted {
  white-space: pre-wrap;
}

#wizardLicense {
  max-height: 20rem;
  overflow-y: scroll;
  background-color: #f5f7fa;
  border: 1px solid #c8d1e0;
  padding: 1em;
}

.imageUpload {
  position: relative;
  border: 1px dashed #c8d1e0;
  z-index: 0;
  text-align: center;
  height: 10.4rem;
  width: 10.4rem;
  min-height: 10.4rem;
}

.imageUpload .changePictureButton {
  position: absolute;
  bottom: 1rem;
  text-align: center;
  z-index: 10;
}

.imageThumbnail,
.imageUploadThumbnail,
.imageUploadThumbnail img {
  height: 10rem;
  width: 10rem;
}

.imageUploadThumbnail img {
  vertical-align: middle;
  text-align: center;
  z-index: 1;
}

.LoginErrorBox,
.LoginErrorBoxHomepage {
  display: inline-block;
  margin: 1em;
}

#LogoBox {
  vertical-align: middle;
}

[dir='ltr'] #LogoBox {
  margin-right: 1em;
}

[dir='rtl'] #LogoBox {
  margin-left: 1em;
}

#WhistleblowerLoginForm input {
  width: 14rem;
}

#HeaderBox #WhistleblowerLoginBox {
  clear: both;
}

#HeaderBox #WhistleblowerLoginBox form {
  clear: both;
}

[dir='ltr'] #HeaderBox #WhistleblowerLoginBox form,
[dir='ltr'] #HeaderBox #WhistleblowerLoginBox label {
  float: right;
}

[dir='rtl'] #HeaderBox #WhistleblowerLoginBox form,
[dir='rtl'] #HeaderBox #WhistleblowerLoginBox label {
  float: left;
}

.recoverykeyinput {
  width: 64rem;
  text-align: center;
}

[dir='ltr'] .nested {
  padding-left: 1em;
}

[dir='rtl'] .nested {
  padding-right: 1em;
}

.filePreview {
  height: 12rem;
}

.imgPreview {
  height: 10rem;
  width: 10rem;
}

.imgPreview img {
  height: 100%;
  width: 100%;
}

.fileUpload {
  position: absolute;
  top: 0;
  z-index: 100;
  height: 10rem;
  width: 10rem;
  text-align: center;
  line-height: 10rem;
  border: 1px solid #c8d1e0;
}

.fileUploadIconSmall {
  position: absolute;
  font-size: 10rem;
  top: 0;
  right: 0;
}

.fileUploadIcon {
  font-size: 2rem;
}

.fileUploadProgress {
  margin-top: 1em;
}

.message, .messageWB {
  padding: 1em;
  border: 1px solid #c8d1e0;
}

.messageWB,
.selectedTip,
[dir] .card-header,
[dir] .table-striped tbody tr:nth-of-type(odd),
[dir] .table-striped > tbody > tr.selectedTip:nth-child(odd) > td {
  background-color: #f5f7fa;
}

#LogoBox img {
  max-height: 10rem;
  max-width: 20rem;
}

#Toolbar {
  margin-bottom: 1em;
}

.modal-title {
  font-size: 1.4rem;
}

#TipList table {
  table-layout: auto;
}

#TipList th,
#TipList td {
  white-space: nowrap;
  min-width: 5rem;
}

@keyframes fadeinout {
  0%,
  100% { opacity: 0; }
  50% { opacity: 1; }
}

.file-info-row {
  margin-top: 1em;
}

.wbfile .top-row {
  min-height: 30px;
}

.disabled-interface {
  pointer-events: none;
  user-select: none;
  background-color: #1d1f2a;
  opacity: .6;
  filter: alpha(opacity=.6);
}

textarea.form-control {
  resize: vertical;
}

.textarea-btn {
  position: absolute;
  top: 2rem;
}

[dir='rtl'] .textarea-btn {
  left: 1rem;
}

[dir='ltr'] .textarea-btn {
  right: 1rem;
}

input[type='file'] {
  position: absolute;
  visibility: hidden;
  width: 1px;
  height: 1px;
}

.fa-none::before {
  content: '\2122';
  color: transparent;
}

.sup {
  vertical-align: super;
  font-size: smaller;
}

.nav,
.pagination,
.carousel,
.card-title a {
  cursor: pointer;
}

.card {
  margin-bottom: 1em;
}

@media (min-width: 768px) {
  .modal-lg .modal-dialog {
    width: 600px;
  }
}

.drag-drop {
  padding: 1em;
  background-color: #F5F7FA;
  border: 1px solid #C8D1E0;
}

.drag-drop:hover {
  background-color: #FFFFFF;
  border-style: dashed;
}

.drag-over {
  border-style: solid;
}

.custom-file {
  width: auto;
}

.custom-file-label::after {
  opacity: 0;
}

#creditCard {
  width: 20rem;
}

[dir] label,
[dir] p:last-child {
  margin: 0;
}

#HomePageBox {
  text-align: center;
  margin: 0 auto;
}

#NodePresentation {
  font-size: 1.2rem;
}

#NodePresentation,
#WhistleblowerSubmitBox {
  margin-bottom: 2em;
}

#NodePresentation,
#WhistleblowingQuestion,
#WhistleblowerLoginPrompt {
  white-space: pre-wrap;
}

#WhistleblowerSubmitBox,
#WhistleblowerLoginBox {
  text-align: center;
}

.description {
  color: #1d1f2a;
  white-space: pre-wrap;
}

.selectCard {
  cursor: pointer;
  margin-bottom: 1em;
  padding: 1em;
  background-color: #ffffff;
  border: 1px solid #c8d1e0;
  border-radius: 5px;
}

.selectCard:hover,
.selectCard.selected {
  background-color: #fffcf1;
}

.selectCard.disabled {
  background-color: #f2dede;
}

[dir='ltr'] .selectCard {
  text-align: left;
}

[dir='rtl'] .selectCard {
  text-align: right;
}

.fieldAnswerEntry {
  margin-top: 1em;
}

.fieldAnswerEntryFirst {
  margin-top: 0;
}

.fieldAnswerEntryLast {
  margin-bottom: 1em;
}

.fieldAnswerEntryLabel::after {
  content: '';
  display: block;
  clear: both;
}

#MaxSelectableReceiverBox {
  margin-bottom: 1em;
}

[dir] .form-control.is-valid,
[dir] .form-control.is-valid:focus,
[dir] .was-validated .form-control:valid,
[dir] .was-validated .form-control:focus {
  color: inherit;
  border-color: inherit;
  box-shadow: inherit;
  background-image: none;
}

.code {
  color: #1d1f24;
  background: #f5f7fa;
}

#Receipt {
  margin: 1em auto;
  width: max-content;
}

.stepIndex {
  display: inline-block;
  color: #c8d1e0;
  width: 1.8rem;
  height: 1.8rem;
  padding: .2rem 0;
  border: 1px solid #c8d1e0;
  border-radius: 50%;
  font-size: .8rem;
  font-weight: bold;
  text-align: center;
}

[dir='ltr'] .stepIndex,
[dir='ltr'] #SubmissionButtons button {
  margin-right: 1em;
}

[dir='rtl'] .stepIndex,
[dir='rtl'] #SubmissionButtons button {
  margin-left: 1em;
}

.stepIndexSelected {
  color: #ffffff;
  background-color: #377abc;
  border-color: #377abc;
}

#SubmissionErrors {
  margin-top: 1em;
}

.question-body {
  padding-bottom: .5em;
}

[dir='ltr'] .question .question {
  padding-left: 1em;
}

[dir='rtl'] .question .question {
  padding-right: 1em;
}

.mapoutline {
  fill: #f5f7fa;
  stroke: #121f24;
  stroke-width: 1.5px;
}

.fileButtons {
  position: absolute;
  top: 0;
  z-index: 666;
  height: 10rem;
  width: 10rem;
  padding: 1em;
}

[dir='ltr'] .fileButtons {
  text-align: right;
}

[dir='rtl'] .fileButtons {
  text-align: left;
}

.configSection {
  margin-bottom: 1em;
}

.configItem {
  border: 1px solid #c8d1e0;
  padding: 1em;
  margin: 1em auto;
}

#TitleBox {
  font-size: 1.6rem;
  line-height: 1;
  font-weight: bold;
  white-space: pre-wrap;
  vertical-align: middle;
}

#LanguagePickerBox .form-control {
  width: auto;
}

#LoginStatusBox,
#LanguagePickerBox .form-control {
  height: 2.2rem;
  line-height: 2.2rem;
  padding: 0 1em;
  width: max-content;
}

#LoginStatusBox,
#WhistleblowerLoginBox {
  color: #1d1f2a;
  background-color: #ffffff;
  border-radius: 5px;
}

#FooterBox {
  background-color: #f5f7fa;
  text-align: center;
}

#FooterBox a,
#FooterBox a:hover,
#Footerbox a:active,
#FooterBox a:focus {
  font-weight: bold;
}

#MessagesConsoleBox {
  position: fixed;
  width: 30rem;
  min-width: 20rem;
  z-index: 10;
  top: 1rem;
  padding: 0 5eem;
}

#StepAddBox,
#StepsEditBox,
#FieldsEditBox,
#ContextAdvancedSettingsBox,
#SubstateEditBox {
  margin-top: .5em;
}

.addField,
.addFieldFromTemplate {
  clear: both;
  margin-bottom: .5em;
}

.field {
  position: relative;
  border: 1px solid #c8d1e0;
  margin-bottom: .5em;
}

.fieldOption {
  margin-bottom: .5em;
}

.selectionList {
  background-color: #f5f7fa;
  padding-top: 1em;
  padding-bottom: 1em;
  border: 1px solid #c8d1e0;
  list-style-type: none;
  overflow: auto;
  max-height: 8rem;
}

text.axis-workweek,
text.axis-worktime {
  fill: #1d1f24;
}

.tos-text {
  display: block;
  padding: 1em;
  font-family: monospace;
  font-size: .8rem;
  color: #1d1f2a;
  background-color: #f5f7fa;
  border: 1px solid #c8d1e0;
  max-height: 20rem;
  max-width: 80rem;
  overflow: auto;
  white-space: pre-wrap;
}

.non-default-language,
.disabled-icon {
  opacity: .2;
}

.non-default-language:hover {
  opacity: 1;
}

[dir='ltr'] .imageUpload .changePictureButton {
  left: 1rem;
}

[dir='rtl'] .imageUpload .changePictureButton {
  right: 1rem;
}

.tip-action-open {
  cursor: pointer;
}

.fieldAnswer {
  margin-bottom: 1em;
}

.TipLabel {
  color: #377abc;
}

#SearchFilter {
  margin: 0 .5em;
}

html[dir='rtl'] input[type=email],
html[dir='ltr'] input[type=email],
html[dir='rtl'] #creditCard,
html[dir='ltr'] #creditCard,
html[dir='rtl'] #Receipt,
html[dir='ltr'] #Receipt {
  direction: ltr;
}

[dir='rtl'] .fa,
[dir='rtl'] .fas {
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

